Tweak to code css styles

--- a/_scss/_tachyons/_styles.scss
+++ b/_scss/_tachyons/_styles.scss
@@ -266,8 +266,9 @@ cite {
 }
 
 .highlighter-rouge {
-  @extend .pa4;
-  @extend .bg-black;
+  @extend .pa2;
+  @extend .f6;
+  @extend .bg-dark-gray;
   @extend .mb4;
   @extend .white;
   @extend .lh-copy;
