--- a/_layouts/quote.html
+++ b/_layouts/quote.html
@@ -8,9 +8,13 @@ layout: default
 </article>
 
 <aside class="page lh-copy">
-  {% for tag in page.tags %}
-    <a href="/tags/{{ tag }}/">{{ tag }}</a>
-  {% endfor %}
-</aside>
+  {% capture words %}
+    {{ page.scraptags | split: "#" }}
+  {% endcapture %}
+
+  {{ words }}
+
+
+  </aside>
 
 {% include article-next-previous.html %}
