--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,9 +11,9 @@
       <a class="link hover-silver white bg-dark-gray dib mr3 mr4-l" href="https://twitter.com/robertocarroll" title="Twitter" rel="me">
         <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" class="h1 w1 h2-l w2-l" height="24" width="24" viewBox="0 0 16 16" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.414"><path d="M16 3.038c-.59.26-1.22.437-1.885.517.677-.407 1.198-1.05 1.443-1.816-.634.375-1.337.648-2.085.795-.598-.638-1.45-1.036-2.396-1.036-1.812 0-3.282 1.468-3.282 3.28 0 .258.03.51.085.75C5.152 5.39 2.733 4.084 1.114 2.1.83 2.583.67 3.147.67 3.75c0 1.14.58 2.143 1.46 2.732-.538-.017-1.045-.165-1.487-.41v.04c0 1.59 1.13 2.918 2.633 3.22-.276.074-.566.114-.865.114-.21 0-.416-.02-.617-.058.418 1.304 1.63 2.253 3.067 2.28-1.124.88-2.54 1.404-4.077 1.404-.265 0-.526-.015-.783-.045 1.453.93 3.178 1.474 5.032 1.474 6.038 0 9.34-5 9.34-9.338 0-.143-.004-.284-.01-.425.64-.463 1.198-1.04 1.638-1.7z" fill-rule="nonzero"/></svg>
       </a>
-        <a class="link hover-silver white bg-dark-gray dib mr3 mr4-l" href="{{ site.baseurl }}/atom.xml" title="RSS">
+    <!--     <a class="link hover-silver white bg-dark-gray dib mr3 mr4-l" href="{{ site.baseurl }}/atom.xml" title="RSS">
           <svg fill="currentColor" viewBox="0 0 24 24" class="h1 w1 h2-l w2-l" height="24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M19.199 24C19.199 13.467 10.533 4.8 0 4.8V0c13.165 0 24 10.835 24 24h-4.801zM3.291 17.415c1.814 0 3.293 1.479 3.293 3.295 0 1.813-1.485 3.29-3.301 3.29C1.47 24 0 22.526 0 20.71s1.475-3.294 3.291-3.295zM15.909 24h-4.665c0-6.169-5.075-11.245-11.244-11.245V8.09c8.727 0 15.909 7.184 15.909 15.91z"/></svg>
-         </a>
+         </a> -->
     </div>
 
     <div class="fl w-100 w-50-ns tc tr-l">
