--- a/_layouts/writing.html
+++ b/_layouts/writing.html
@@ -3,7 +3,7 @@ layout: wide
 ---
 
 <article class="work-main pt4">
-  <h1 class="f1 f-subheadline-l mb3 mb5-l tc">{{ page.title }}</h1>
+  <h1 class="f2 f1-l mb3 mb5-l tc">{{ page.title }}</h1>
   <hr class="cb">
 
   {{ content }}
