Remove gridset from writing article layout

--- a/_layouts/writing.html
+++ b/_layouts/writing.html
@@ -2,15 +2,15 @@
 layout: wide
 ---
 
-<article class="work-main pt4">
+<article class="ph3 ph0-l mw7-ns center pt4">
   <h1 class="f2 f1-l mb3 mb5-l tc">{{ page.title }}</h1>
-  <hr class="cb">
+  <hr class="cb mh3 mv4 post">
 
   {{ content }}
 
   <p class="f6 light-silver tracked ttu">{{ page.date | date: '%Y' }}</p>
 </article>
 
-<div class="work-main">
+<div class="ph3 ph0-l mw7-ns center">
   {% include article-next-previous.html %}
 </div>
