--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -3,9 +3,10 @@ layout: wide
 ---
 
 <article class="work-main">
-  <h1 class="f1 mb3 mb5-l tc">{{ page.title }}</h1>
-  <hr class="cb">
-  <p class="i light-silver m0 f3">{{ page.excerpt }}</p>
+  <h1 class="f1 tc mt3 mb3 mt5">{{ page.title }}</h1>
+  <p class="i light-silver m0 f3 tc">{{ page.excerpt }}</p>
+  <hr class="cb mh3 mv4 post">
+
   {{ content }}
 </article>
 
