--- a/_includes/stub-journalism.html
+++ b/_includes/stub-journalism.html
@@ -2,4 +2,4 @@ I’ve written articles for The National, The Wire, Ultra Travel, The Guardian, 
 subjects as diverse as&nbsp;<a href="/writing/mirror-neurons/">mirror neurons</a>,&nbsp;<a
     href="/writing/martin-parr">Martin Parr</a>,&nbsp;<a href="/writing/dad-matters-the-national">parenting</a>,&nbsp;<a
     href="/writing/mar-musa-monastery-syria">Syrian
-    monasteries</a>&nbsp;and&nbsp;<a href="/writing/silent-disco-a-quiet-night-out">silent disco</a>.
+    monasteries</a>&nbsp;and&nbsp;<a href="/writing/silent-disco-a-quiet-night-out">silent disco</a>
